version/0.12/_sources/api/solver/_autosummary/settings/file.rst.txt
:orphan:

.. _file:

file
====

.. currentmodule:: ansys.fluent.core.solver.settings_231.file

.. autoclass:: file
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==================================================================   ===================================================================================================

Child                                                                                                                                                            Summary

==================================================================   ===================================================================================================
:ref:`single_precision_coordinates <single_precision_coordinates>`                                      Indicate whether to write nodal coordinates in single precision.

:ref:`binary_legacy_files <binary_legacy_files>`                                                    Indicate whether to write binary or text format case and data files.

:ref:`cff_files <cff_files>`                                             Indicate whether to write ANSYS common fluids format (CFF) files or legacy case and data files.

:ref:`async_optimize <async_optimize>`                                               Choose whether to optimize file IO using scratch disks and asynchronous operations.

:ref:`write_pdat <write_pdat>`                                                                                           Indicate whether to attempt to save pdat files.

:ref:`confirm_overwrite <confirm_overwrite>`                                                    Indicate whether or not to confirm attempts to overwrite existing files.

:ref:`export <export>`                                                                                                                                   'export' child.

:ref:`import_ <import_>`                                                                                                                                 'import' child.

:ref:`parametric_project <parametric_project>`                                                                                               'parametric_project' child.

==================================================================   ===================================================================================================

.. rubric:: Commands

============================================   ====================================================

Command                                                                                     Summary

============================================   ====================================================
:ref:`auto_save <auto_save>`                                                     'auto_save' child.

:ref:`define_macro <define_macro>`                                     Save input to a named macro.

:ref:`read <read_1>`                                                                'read' command.

:ref:`read_case <read_case>`                                                   'read_case' command.

:ref:`read_case_data <read_case_data>`                                    'read_case_data' command.

:ref:`read_case_setting <read_case_setting>`                           'read_case_setting' command.

:ref:`read_data <read_data>`                                                   'read_data' command.

:ref:`read_mesh <read_mesh>`                                                   'read_mesh' command.

:ref:`read_journal <read_journal>`                                             Read a journal file.

:ref:`start_journal <start_journal>`                           Start recording all input in a file.

:ref:`stop_journal <stop_journal>`                 Stop recording input and close the journal file.

:ref:`replace_mesh <replace_mesh>`                                          'replace_mesh' command.

:ref:`write <write>`                                                               'write' command.

============================================   ====================================================

.. rubric:: Included in:

==================   ==================

Parent                          Summary

==================   ==================
:ref:`root <root>`       'root' object.

==================   ==================

